fix table column heading alignment on ie

--- a/css/style.css
+++ b/css/style.css
@@ -28,14 +28,14 @@ div.formesque {
   padding: 10px;
   width: 300px;
 }
-    
+
 div.formesque label, div.formesque input {
   display: block;
   width: 120px;
   float: left;
   margin-bottom: 10px;
 }
- 
+
 div.formesque label {
   text-align: right;
   padding-right: 20px;
@@ -47,7 +47,6 @@ table {
     border-collapse: collapse;
     font-size: 12px;
     margin: 20px;
-    text-align: left;
     width: 600px;
 }
 
@@ -56,10 +55,12 @@ table th {
     color: #003399;
     font-size: 14px;
     font-weight: normal;
+    text-align: left;
     padding: 10px 8px;
 }
 
 table td {
+    text-align: left;
     border-bottom: 1px solid #CCCCCC;
     color: #666699;
     padding: 6px 8px;
@@ -68,4 +69,3 @@ table td {
 table tbody tr:hover td {
     color: #000099;
 }
-
